--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,9 @@
 
     <TextView
         android:id="@+id/news_content"
-        android:layout_width="400dp"
-        android:layout_height="319dp"
+        android:layout_width="390dp"
+        android:layout_height="248dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Author"
         app:layout_constraintBottom_toTopOf="@+id/news_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,11 +69,13 @@
         android:id="@+id/news_URL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="URL"
-        app:layout_constraintBottom_toBottomOf="@+id/news_author"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/news_author" />
+        app:layout_constraintBottom_toTopOf="@+id/news_author"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headline_text" />
 
     <Button
         android:id="@+id/news_button"
