--- a/app/src/main/res/layout/news_row_layout.xml
+++ b/app/src/main/res/layout/news_row_layout.xml
@@ -6,23 +6,30 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/Title"
-        android:layout_width="wrap_content"
+        android:id="@+id/title_textview"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/link_to_news"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/Date"
-        android:layout_width="wrap_content"
+        android:id="@+id/source_textview"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/Title"
-        app:layout_constraintTop_toBottomOf="@+id/Title" />
+        android:textSize="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/link_to_news"
+        app:layout_constraintStart_toStartOf="@+id/title_textview"
+        app:layout_constraintTop_toBottomOf="@+id/title_textview" />
 
     <Button
         android:id="@+id/link_to_news"
@@ -30,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="Link"
-        app:layout_constraintBottom_toBottomOf="@+id/Date"
+        app:layout_constraintBottom_toBottomOf="@+id/source_textview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
