--- a/app/src/main/res/layout/news_row_layout.xml
+++ b/app/src/main/res/layout/news_row_layout.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/source_textview"
+        android:id="@+id/date_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="Link"
-        app:layout_constraintBottom_toBottomOf="@+id/source_textview"
+        app:layout_constraintBottom_toBottomOf="@+id/date_textview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
